--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
   
   header {
     flex: 0 50px;
-    font-size: 22px;
+    font-size: 20px;
     background: #408697;
     color: Azure;
+    padding: 0 0.5em;
     
     display: flex;
     flex-direction: row;
@@ -27,16 +28,30 @@
     align-items: center;
   }
 
-  nav {
-    font-size: 22px;
-    background: #408697;
-    color: Azure;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-  }
+  /* Add a black background color to the top navigation */
+.topnav {
+  background-color: #408697;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #8D8C8A;
+  color: white;
+}
   
   main {
     flex: 1;
