--- a/style.css
+++ b/style.css
@@ -1,179 +1,226 @@
-* {
-    font-family: helvetica;
-    color: #F6F6F6;
-  }
-  
-  html{
-    height: 100%;
-    background-color: #333;
-  }
-  
-  body {
-    margin: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  header {
-    flex: 0 50px;
-    font-size: 20px;
-    background: #408697;
-    color: Azure;
-    padding: 0 0.5em;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-  }
-
-  /* Add a black background color to the top navigation */
-.topnav {
-  background-color: #408697;
-  overflow: hidden;
+body, html{margin:0;font:normal 0/0 Arial, Helvetica, sans-serif;background:#333;overflow:hidden;color:#fff;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+body, html, .flipper, .f, .b, #g {width:100%;height:100%;}
+
+
+@font-face{font-family: "GeneralFoundicons";font-weight:normal;font-style:normal;
+	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.eot");
+	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.eot?#iefix") format("embedded-opentype"),
+	     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.woff") format("woff"),
+	     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.ttf") format("truetype"),
+	     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/60583/general_foundicons.svg#GeneralFoundicons") format("svg");
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+a {
+	text-decoration:none;
+	color:#fff;
+	display:block;
+	font:bold 18px/75px 'Arial';
+	text-transform:uppercase;
+	text-align:center;padding:0;
+	margin:0 1px;}
+
+a:hover{
+	color:#fff;
+	background:rgba(255, 255, 255, .1)
 }
 
-.topnav a.active {
-  background-color: #8D8C8A;
-  color: white;
-}
-  
-main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+/* FRONT SCREEN */
+.logo {
+	width:450px;
+	height:450px;
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin:-225px 0 0 -225px
 }
 
-.welcome {
-  font-size: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
+.logo .card {
+	width:50%;
+	height:50%;
+	cursor:default;
+	position:relative
 }
 
-div {
-  padding: 0 0.5em;
+.logo .card.left.active {
+	z-index:2
 }
 
-.playersmain {
-  flex: 1;
-  display: flex;
-  width: 100%;
-  padding: 0.25em;
+.logo .card.left.active + .card {
+	opacity:0
 }
 
-.player-name {
-  color: rgb(118, 190, 210);
+.logo .card.left.active .b {
+	margin-left:-100%
 }
 
-#player-messages {
-  padding-top: 0.25em;
-  opacity: 0.7;
-
-  vertical-align: top;
-  text-align: left;
+.logo .f {
+	font:normal 130px/225px 'Arial';
+	text-align:center;
+	text-transform:uppercase;
 }
 
-.event {
-  color: azure;
+.logo .c2 {
+	transform:scale(-1, 1);
+	-webkit-transform:scale(-1, 1);
+	-moz-transform:scale(-1, 1);
+	-ms-transform:scale(-1, 1)
 }
 
-.player-event {
-  color: rgb(165, 220, 235);
+.logo .c2:hover {
+	color:#fff;
+	background:#9d2e21;
 }
 
-.system-event {
-  color: rgb(221, 148, 40);
+
+.logo .contentbox {
+	width:200%;
+	font:normal 12px/16px 'Arial';
+	text-align:left
 }
 
-#players {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 95%;
+.logo .contentbox.levels {
+	width:100%
 }
 
-#players td, #players th {
-  border: 2px solid #ddd;
-  padding: 8px;
+.logo .contentbox .padded{
+	padding:0 15px;
 }
 
-#players tr:nth-child(even){background-color: #8D8C8A;}
-
-#players tr:hover {background-color: #f8b91b;}
-
-#players th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #8D8C8A;
-  color: AZURE;
+.logo .contentbox h2{
+	font-size:24px;
+	padding:0;
+	margin:28px 0;
+	text-transform:uppercase
 }
 
-footer {
-  flex: 0 50px;
-  font-size: 20px;
-  background: #8D8C8A;
-  color: azure;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-  
-.picture-box {
-  height: calc(250px + 1em);
-  margin-bottom: 1em;
-  padding: 0.5em;
-  background: rgb(86, 89, 93);
-  border-radius: 5px;
+.logo .contentbox p{
+	line-height:14px;
+	margin:14px 0
 }
 
-.play-header {
-  flex: 1;
-  display: flex;
-  width: 100%;
-  padding: 0.25em;
-  justify-content: space-between;
+#stats h2 i{
+	margin-right:10px;
+	vertical-align:top;
+	font:italic normal 9px/8px 'Arial';
+	color:rgba(255,255,255, .4)
 }
 
-.timer {
-  color:#f8b91b;
+#stats ul{
+	width:50%;
+	display:inline-block;
+	margin:0;padding:0;
+	list-style-type:none;
+	vertical-align:top;
+	line-height:22px
 }
 
-.name {
-  color:azure;
+#stats li{
+	display:block;
+	margin:0;
+	padding:0;
 }
 
-.difficulty {
-  color:#f8b91b;
+#stats li b{
+	display:inline-block;
+	font-size:12px;
+	width:95px
 }
 
-.game {
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-  
+#stats a {
+	position:absolute;
+	bottom:0;
+	width:100%;
+	margin-left:-15px;}
+
+.logo .info{
+	font-size:11px;
+	line-height:16px;
+	text-align:center;
+	color: rgba(255,255,255, .3);
+	padding:0 25px;}
+
+/*GAME SCREEN*/
+#g{margin-top:4px}
+#g .timer{width:0%;height:5px;position:absolute;top:0;background:#C0392B;z-index:1}
+@-webkit-keyframes timer {100% { width:100%; }}
+@-moz-keyframes timer {100% { width:100%; }}
+@-o-keyframes timer {100% { width:100%; }}
+@keyframes timer {100% { width:100%; }}
+.pause{position:absolute;width:100%;height:100%;left:0;top:0;z-index:100;background:rgba(51, 51, 51, 0.78)}
+.pause::before{content:'PAUSED';width:100%;position:absolute;margin-top:-100px;top:50%;background:#C0392B;color:#fff;font:bold 80px/200px 'Open Sans';
+display:block;text-align:center;}
+/* card styles */
+#g .found{display:inline-block}
+.card{display:inline-block;-webkit-perspective:1000;-moz-perspective:1000;}
+.card:not(.active):hover{opacity:.8}
+.card .b::before{content:attr(data-f);display:block;font:normal 100px/100px "GeneralFoundicons";
+position:absolute;top:50%;margin-top:-50px;width:100%;text-align:center}
+
+/* flip cards */
+.flipper {
+	position:relative;
+	-webkit-transform-style:preserve-3d;
+	-moz-transform-style:preserve-3d
+}
+
+.f, .b {
+	position:absolute;top:0;
+	left:0;box-shadow:inset 0 0 0 1px #333;
+	-webkit-backface-visibility:hidden;
+	-moz-backface-visibility:hidden
+}
+
+.f {
+	background:#16A085;
+	z-index:1
+}
+
+.b {background:#C0392B;
+	opacity:0
+}
+
+.card.active .b{
+	z-index:2;
+	opacity:1
+}
+
+/*Grouped for easy prefixing*/
+.card, .flipper, .logo .b{transition:400ms;-ms-transition:400ms;-webkit-transition:400ms;-moz-transition:400ms;-o-transition:400ms}
+.card.active .flipper, .b {transform:rotateY(180deg);-webkit-transform:rotateY(180deg);-moz-transform:rotateY(180deg);-ms-transform:rotateY(180deg);-o-transform:rotateY(180deg)}
+.logo .f, .card .b::before, .pause::before{-webkit-text-stroke: 1px #fff} /*webkit only*/
+
+/*Responsive Stuff*/
+@media all and (max-width: 1680px) and (min-width: 640px){
+	.card .b::before{font-size:90px}
+	#g.medium .card .b::before{font-size:70px}
+	#g.hard .card .b::before{font-size:50px}
+}
+@media all and (max-width: 640px) and (min-width: 470px){
+	.card .b::before{font-size:90px}
+	#g.medium .card .b::before{font-size:60px}
+	#g.hard .card .b::before{font-size:50px}
+}
+
+@media all and (max-width: 470px) and (min-width: 0px){
+	.card .b::before{font-size:60px}
+	#g.medium .card .b::before{font-size:35px;-webkit-text-stroke:0;}
+	#g.hard .card .b::before{font-size:32px;-webkit-text-stroke:0;}
+}
+
+@media all and (max-width: 640px) and (min-width: 0px){
+	a{line-height:50px;font-size:13px}
+	.logo{width:300px;height:300px;margin:-150px 0 0 -150px}
+	.logo .f{font:normal 80px/150px 'Open Sans'}
+	.logo .contentbox h2{font-size:16px;margin:24px 0;}
+	.logo .instructions h2{display:none}
+	.logo .instructions.contentbox p:nth-child(3){display:none}
+	#stats li b{width:auto}
 }
