--- a/lb.css
+++ b/lb.css
@@ -43,6 +43,35 @@
   .round {
     border-radius: 50%;
   }
+  .players {
+    flex: 1;
+    width: 100% !important;
+    height: 100%;
+    padding: 0.5em;
+    font: status-bar;
+    font-size: 16px;
+    }
+    
+  .player-name {
+    color: rgb(118, 190, 210);
+    }
+    
+  #player-messages {
+    padding-top: 0.25em;
+    opacity: 0.7;
+    }
+    
+  .event {
+    color: rgba(255, 255, 255, 0.804);
+    }
+    
+  .player-event {
+    color: #16A085;
+    }
+    
+  .system-event {
+    color: #C0392B;
+    }
 
 
 #players {
@@ -57,17 +86,17 @@
     padding: 8px;
   }
 
-  #players tr:nth-child(1){background-color: #16A085;}
+  #players thead{background-color: #16A085;}
   
   #players tr:nth-child(even){background-color: #8D8C8A;}
   
   #players tr:hover {
     background-color: #C0392B;
-    animation: animate .5s linear;
+    animation: animate-table .5s linear;
 }
 
 
-@keyframes animate { 
+@keyframes animate-table { 
     0% { 
         transform: translate(-0%, 0%)  
           perspective(100px)  
@@ -101,4 +130,28 @@
     justify-content: center;
     align-items: center;
   }
+
+  p {
+    font-size: 12px;
+    color:#8D8C8A
+  }
     
+  .arrow {
+    position: absolute;
+    padding: 3em;
+    transform: translate(-50%, -50%);
+    transform: rotate(90deg);
+    cursor: pointer;
+}
+
+.arrow span {
+    display: block;
+    width: 1vw;
+    height: 1vw;
+    border-bottom: 5px solid rgba(255, 255, 255, 0.486);
+    border-right: 5px solid rgba(255, 255, 255, 0.486);;
+    transform: rotate(45deg);
+    margin: -10px;
+    /*animation: animate-arrow 2s infinite;*/
+}
+
