--- a/Public/about.css
+++ b/Public/about.css
@@ -44,7 +44,9 @@ align-items: center;
 
 p {
 font-size: 16px;
-color:#8D8C8A
+color:azure;
+text-align: center;
+padding: 2em;
 }
 
 .quote {
@@ -72,9 +74,10 @@ margin: -10px;
 }
 
 .picture-box {
-height: calc(100px + 1em);
+height: calc(150px + 1em);
 margin-bottom: 1em;
 padding: 0.5em;
+width: 75%;
 background: rgb(86, 89, 93);
 border-radius: 5px;
 }
