--- a/Public/style.css
+++ b/Public/style.css
@@ -185,7 +185,7 @@ a:hover{
 @-o-keyframes timer {100% { width:100%; }}
 @keyframes timer {100% { width:100%; }}
 .pause{position:absolute;width:100%;height:100%;left:0;top:0;z-index:100;background:rgba(51, 51, 51, 0.78)}
-.pause::before{content:'PAUSED';width:100%;position:absolute;margin-top:-100px;top:50%;background:#C0392B;color:#fff;font:bold 80px/200px 'Open Sans';
+.pause::before{content:'PAUSED';width:100%;position:absolute;margin-top:-100px;top:50%;background:#C0392B;color:#fff;font:bold 80px/200px 'Arial';
 display:block;text-align:center;}
 /* card styles */
 #g .found{display:inline-block}
